--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ ignore =
 max-line-length = 88
 
 [pytest]
-filterwarnings = 
+filterwarnings =
     # -- exit on any warning not explicitly ignored here --
     error
 
@@ -37,6 +37,7 @@ skip_missing_interpreters = false
 [testenv]
 deps =
     behave==1.2.5
+    fontconfig-py>=0.1.2
     lxml>=3.1.0
     Pillow>=3.3.2
     pyparsing>=2.0.1
@@ -50,6 +51,7 @@ commands =
 [testenv:py27]
 deps =
     behave==1.2.5
+    fontconfig-py>=0.1.2
     lxml>=3.1.0
     mock
     Pillow>=3.3.2
